2005-09-12  Praveen Kumar  <kpraveen@novell.com>

	* exchange-config-listener.c
	(remove_selected_non_offline_esources): Added new
	(add_account_esources): Don't add the calendars and tasks in the 
	selected list
	(account_added): If starting in offline mode remove the non-offline
	calendars and tasks from the selected list so that it doesn't
	throws an error

	Fixes the bug 273272.
	
2005-08-11  Praveen Kumar  <kpraveen@novell.com>

	* exchange-config-listener.c
	(exchange_camel_urls_is_equal): Added new
	(exchange_config_listener_modify_esource_group_name): Added new
	(account_changed): Handle most of the account parameter changes
	without restart. This fixes bug 272784 and partially bug 220168
	(account_removed): Removed the message dialog that says that the
	changes will be reflected after restart. This partially fixes the
	bug 220168
	
2005-08-08  Arunprakash <arunp@novell.com>

	* exchange-folder-size-display.c: Included glib/gi18n.h file for
	translation. 
	* exchange-operations.c: Same.

2005-08-05  Arunprakash <arunp@novell.com>

	* exchange-folder-size-display.c (exchange_folder_size_display) :
	Marked strings for translation that were left out.
	* exchange-operations.c (exchange_operations_cta_add_node_to_tree)
	(exchange_operations_cta_select_node_from) : Same.
	
2005-08-03  Shakti Sen <shprasad@blr.novell.com>

	* exchange-folder.c (org_gnome_exchange_folder_ab_unsubscribe)
	(org_gnome_exchange_folder_unsubscribe)
	(org_gnome_exchange_folder_subscription): Added offline/online support
	and removed some warning messages.
	* exchange-operations.c: Added a new function exchange_is_offline().
	* exchange-operations.h: Included a prototype.
	* exchange-config-listener.c
	(exchange_config_listener_get_offline_status): Added newly to get the
	online/offline status.
	* exchange-config-listener.h: Added the prototype for
	exchange_config_listener_get_offline_status().

	Fixes bug #311324.

2005-08-03  Sarfraaz Ahmed <asarfraaz@novell.com>
