@@ -184,14 +184,25 @@ ExchangeAccount *
 exchange_operations_get_exchange_account (void) 
 {
 	ExchangeAccount *account = NULL;
+	ExchangeAccountResult result;
 	GSList *acclist;
 
 	acclist = exchange_config_listener_get_accounts (exchange_global_config_listener);
 	/* FIXME: Need to be changed for handling multiple accounts */
-	if (acclist)
+	if (acclist) {
 		account = acclist->data; 
 	
-	return account;
+		if (exchange_account_get_context (account))
+			return account;
+		else {
+			/* Try authenticating */
+			result = exchange_config_listener_authenticate(exchange_global_config_listener, account);
+			if (exchange_account_get_context (account))
+				return account;
+		}
+	}
+	
+	return NULL;
 }
 
 void
